Added initial EF Core support and reorder of the project

--- a/GetStartedWPF/GetStartedWPF.csproj
+++ b/GetStartedWPF/GetStartedWPF.csproj
@@ -8,11 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Libreria.Data\Libreria.Data.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.11" />
   </ItemGroup>
 
 </Project>
